[package]
name = "rnr-rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rnr-core = { path = "../rnr-core" }
glam = "0.24"
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
